# sc3000emulator

./: .gitignore  CMakeLists.txt  README.md
prebuild/: sc3000emulator.uf2
sc3000emulator/: CMakeLists.txt  hid_app.c  joystick.c  sc3000emulator.c  sc3000keymap.h
